# cutecosmic-nix

./: .gitignore  README.md
bindings/: Cargo.toml
bindings/src/: theme.rs
nix/: package.nix
